--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-body {
-	
+body {	
   background-color: #fff;
   margin: 0;
   padding: 0;
+  width: 100%
 }
 
 #header{
@@ -13,8 +13,7 @@ body {
 	position: relative;
 	top: 0px;
 	width: 100%;
-	z-index: 1000;
-  
+	z-index: 1000; 
 }
 
 .navigation {
