--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 body {	
   background-color: #fff;
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 0 quto;
   width: 100%
+  height: auto;
 }
 
 #header{
 	 background-image: url("bg.jpg");
 	background-size: cover;
 	background-attachment: fixed;
-	height: 700px;
+	height: 900px;
 	position: relative;
-	top: 0px;
 	width: 100%;
 	z-index: 1000; 
 }
@@ -27,13 +27,11 @@ body {
   z-index: 10000;
 }
 
-
-
 .head {
 	background-color: rgba(255, 255, 255, 0.7);
 	padding: 10px;
 	position: absolute;
-	top: 50px;
+	top: 69px;
 	left: 0px;
 	text-align: center;
 	width: 100%;
@@ -144,17 +142,20 @@ img {
 	position: center;
 }
 
-.footer{
-	text-align: center;
-}
-
-
 .network img {
-	width: 20%;
-	height: 20%;
+	height: 25px;
 	display: inline-block;
-	padding-center: 0;
+	background-size: cover;
 }
 
+.network {
+	width: 10%;
+	display: inline-block;
+}
+
+.footer p{
+	text-align: center;
+	font-size: 20px;
+}
 
 	
