--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-	background-color: #fff;
+	background-color: #62b5e7;
 	margin: 0;
 	padding: 0;
 	width: 100%;
@@ -7,36 +7,33 @@ html, body {
 }
 
 #header{
-	background-image: url("bg.jpg");
+	background-image: url("bg3.jpg");
 	background-size: cover;
 	background-attachment: fixed;
-	height: 1100px;
-	position-center: relative;
-	top: 68px;
+	height: 1000px;
 	width: 100%;
-	z-index: 10000;
+	z-index: 1000;
 }
 
 .navigation {
 	background-color: rgba(255, 255, 255, 0.7);
-  overflow-y: 0 auto;
+  overflow: 0 auto;
   position: fixed;
   left: 0px;
   top: 0px;
   text-align: center;
   width: 100%;
-  z-index: 10000;
+  z-index: 1000;
 }
 
-.head {
+.head{
 	background-color: rgba(255, 255, 255, 0.7);
-	position: relative;
 	top: 0px;
-	left: 0px;
-	text-align: center;
 	width: 100%;
 	left: 0;
-	padding:30px 0px;
+	color: #5eb4e5;
+	text-align: center;
+	padding: 30px;
 }
 
 ul{
@@ -46,9 +43,9 @@ ul{
 
 li {
 	display: inline-block;
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: 200;
-	margin: 10px 10px;
+	margin: 20px 20px;
 	text-transform: uppercase;
 }
 
@@ -64,89 +61,77 @@ a:visited {
 
 /* selected link */
 a:active {
-    color: green;	
+    color: #5eb4e5;	
 }
 
 /* home page link*/
 #sym {
-  color: #FFFF;
-  font-size: 32px;
+  color: #5eb4e5;
+  font-size: 70px;
   padding: 0px 0px;
 }
 
-.tplayer {
-  margin: 0 auto;
-  position: relative;
-  text-align: center;
-  bottom: 250px;
-  width: 100%;
+
+#content{
+	position: absolute;
+	display: block !important;
+
+}
+
+.card{
+	margin: 0 auto;
+	display: inline-blockblock !important;
+}
+
+#content .card{
+	width: 70%;
+	
 }
 
 h1 {
-	color: #dd820b;
-	font-size: 70px;
 	line-height: 100px;
 	padding: 20px 10px;
-	text-align: center;
 }
 
 h2 {
-	color: #FFFF;
-	font-size: 42px;
 	font-weight: 300;
 	text-align: center;
 }
 
 h3 {
-	
-  color: Teal;
   font-size: 28px;
-  text-align: center;
   text-transform: uppercase;
 }
 
+h4{
+	text-align: center;
+}
+h5{
+	text-align: center;
+}
+
 p {
-  color: #ffff;
-  font-family: sans-serif;
+	font-family: 'Comic Sans MS', cursive, sans-serif;
   font-size: 16px;
-  font-weight: 300;
-  text-align: center;
+  text-align: left;
 }
 
-.btn {
-	border-radius:12px;
-	border: 2px solid #dd820b;
-	color: #FFF;
+.btn{
 	font-family: 'Amatic SC', cursive;
-	font-size: 26px;
-	padding: 14px;
+	padding: 20px;
 }
 
-.teams {
-	top: 250px;
-	margin: 5px auto;
+.teams{
+	margin: 20px;
 	padding: 30px 30px;
 	text-align: center;
 	position: relative;
 }
 
-.team {
-  display: inline-block;
-  margin: 20px 3% 20px 3%; 
-  text-align: center;
-  width: 40%;
-  box-sizing: border-box;
-  padding: 10px 10px;
-  height: 300px;
-  position: relative;
-}
-
 img {
-	border-radius: 100%;
 	width: 100%;
 	height: 100%;
-	display: inline-table;
-	position: center;
+	
 }
 
 .network img {
@@ -160,3 +145,158 @@ img {
 	transform: rotate(90deg) scale(2);
 	cursor: pointer;
 }
+
+/* Small devices (landscape phones, 200px and up)*/
+@media (min-width: 200px) {
+	body {
+		background-size: contain;
+		padding-top: 170px;
+		
+	}
+	
+	li{
+		margin: 0px 0px;
+		float: center;
+		display: block;
+	}
+	
+	#sym{
+		font-size: 20px;
+		text-shadow: 10px;
+	}
+	
+	.card {
+		height: 100%;
+	}
+	
+	.head{
+		display:block;
+		float: center;
+		background-attachment:
+	}
+	.footer p{
+		text-align: center;
+	}
+	
+}
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+	body {
+		padding-top: 130px;
+	}
+	
+	li{
+		margin: 20px 50px;
+		
+		display: inline-block;
+	}
+	
+	.card {
+		height: 100%;
+	}
+	.network{
+		display: inline-block;
+		float: center;
+		margin: 10px 10px;
+	}
+	
+	.footer p{
+		text-align: center;
+	}
+	
+	.footer img {
+		width: 25px;
+		display: inline-block;
+	}
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+	body {
+		padding-top: 150px;
+	}
+	.card {
+		margin: 0 auto;
+		display: block;
+		position: relative;
+		
+	}
+	
+	li{
+		padding: 20px;
+		margin: 20px 10px;
+		display: inline-block;
+		font-weight: 200;
+	}
+	#sym{
+		font-size: 18px;
+		text-shadow: 10px;
+	}
+	.footer img {
+		width: 40px;
+		display: inline-block;
+	}
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+	body {
+		padding-top: 130px;
+		width: 100%;
+	}
+	
+	.teams{
+	margin: 20px;
+	padding: 30px 30px;
+	text-align: center;
+	}
+
+	.card{
+		height: 0 auto;
+		width:100%;
+		
+		
+	}
+	
+	#header{
+		text-align: center;
+	}
+	
+	#content{
+		width: 100%;
+		display: -webkit-box;
+	}
+	
+	
+	li{
+		margin: 20px 20px;
+		display: inline-block;
+		font-weight: 200;
+		font-size: 18px;
+	}
+	
+	#sym{
+		font-size: 22px;
+		text-shadow: 20px;
+	}
+
+}
+
+
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+	body {
+		padding-top: 100px;
+	}
+	
+	
+	#header{
+		text-align: center;
+	}
+	
+	
+}
+
+
